// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when count is not zero matches snapshot 1`] = `
<div class="class-distribution-progress">
  <div class="class-distribution-progress__content" style="background-color: rgba(0, 0, 0, 0.1); opacity: 0.8; width: 50%;"></div> <label class="class-distribution-progress__count">5</label>
</div>
`;

exports[`when count is zero matches snapshot 1`] = `
<div class="class-distribution-progress">
  <div class="class-distribution-progress__content" style="background-color: rgba(0, 0, 0, 0.1); opacity: 0.3; width: 0%;"></div> <label class="class-distribution-progress__count">0</label>
</div>
`;
